# authservice/models/role.go
@@ -1,0 +1,9 @@
+package models
+
+type Role int
+
+const (
+	Admin Role = iota
+	Student
+	Professor
+)
